// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MyProfileCreationStatusItem renders the component with done status 1`] = `
<Component
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "black",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "justifyContent": "flex-start",
      "marginTop": 26.68,
      "width": 487.5,
    }
  }
>
  <Icon
    allowFontScaling={false}
    name="md-checkmark"
    size={36.71511950137163}
    style={
      Object {
        "color": "#714ADD",
        "fontWeight": "800",
      }
    }
  />
  <Component
    style={
      Object {
        "color": "#CCCCCC",
        "fontSize": 42.83430608493357,
        "fontWeight": "800",
        "marginLeft": 37.5,
      }
    }
  >
    test
  </Component>
</Component>
`;

exports[`MyProfileCreationStatusItem renders the component with missing status 1`] = `
<Component
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "black",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "justifyContent": "flex-start",
      "marginTop": 26.68,
      "width": 487.5,
    }
  }
>
  <Icon
    allowFontScaling={false}
    name="ios-close"
    size={61.191865835619396}
    style={
      Object {
        "color": "#714ADD",
        "fontWeight": "800",
      }
    }
  />
  <Component
    style={
      Object {
        "color": "#CCCCCC",
        "fontSize": 42.83430608493357,
        "fontWeight": "800",
        "marginLeft": 37.5,
      }
    }
  >
    test
  </Component>
</Component>
`;

exports[`MyProfileCreationStatusItem renders the component with pending status 1`] = `
<Component
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "black",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "justifyContent": "flex-start",
      "marginTop": 26.68,
      "width": 487.5,
    }
  }
>
  <Icon
    allowFontScaling={false}
    name="md-clock"
    size={61.191865835619396}
    style={
      Object {
        "color": "#714ADD",
        "fontWeight": "800",
      }
    }
  />
  <Component
    style={
      Object {
        "color": "#CCCCCC",
        "fontSize": 42.83430608493357,
        "fontWeight": "800",
        "marginLeft": 37.5,
      }
    }
  >
    test
  </Component>
</Component>
`;
